@@ -400,55 +400,6 @@ class FeedBusinessLayerTest extends \OCA\AppFramework\Utility\TestUtility {
 		$this->assertEquals($return, $feed);
 	}
 
-	public function testUpdateUpdatesEntry(){
-		$feed = new Feed();
-		$feed->setId(3);
-		$feed->getUrl('test');
-
-		$item = new Item();
-		$item->setGuidHash(md5('hi'));
-		$item->setPubDate(3333);
-		$items = array(
-			$item
-		);
-
-		$item2 = new Item();
-		$item2->setPubDate(111);
-
-		$fetchReturn = array($feed, $items);
-
-		$this->feedMapper->expects($this->at(0))
-			->method('find')
-			->with($this->equalTo($feed->getId()),
-					$this->equalTo($this->user))
-			->will($this->returnValue($feed));
-		$this->fetcher->expects($this->once())
-			->method('fetch')
-			->will($this->returnValue($fetchReturn));
-		$this->itemMapper->expects($this->once())
-			->method('findByGuidHash')
-			->with($this->equalTo($item->getGuidHash()), 
-					$this->equalTo($feed->getId()),
-					$this->equalTo($this->user))
-			->will($this->returnValue($item2));
-		$this->itemMapper->expects($this->at(1))
-			->method('delete')
-			->with($this->equalTo($item2));
-		$this->itemMapper->expects($this->at(2))
-			->method('insert')
-			->with($this->equalTo($item));
-		
-		$this->feedMapper->expects($this->at(1))
-			->method('find')
-			->with($feed->getId(), $this->user)
-			->will($this->returnValue($feed));
-
-		$return = $this->feedBusinessLayer->update($feed->getId(), $this->user);
-
-		$this->assertEquals($return, $feed);
-		$this->assertTrue($item->isUnread());
-	}
-
 
 	public function testCreateUpdateFails(){
 		$feed = new Feed();
